# storyteller

./: .gitignore  .gitmodules  CONTEXT-DSL.md  DATA-MODEL.md  DESIGN.md  PLAN-storage-monad.md  README.md  SELECTION.md  STRUCTURE.md  TODO.md  WRITER.md  WS-PROTOCOL.md  cabal.project  flake.nix  story-server.prof  storyteller.cabal
app/: Chapter.hs  CharGen.hs  Main.hs  Outline.hs  Rebase.hs  Server.hs  Track.hs  Write.hs
app/Server/: API.hs  Dispatch.hs  Env.hs  Handlers.hs  Protocol.hs  Run.hs  Session.hs  Types.hs  Util.hs
app/Server/Agent/: Append.hs  CharGen.hs  Rebase.hs  Track.hs  Write.hs
app/Server/Branch/: Connection.hs  Dispatch.hs  Protocol.hs
app/Server/File/: Connection.hs
app/Server/Session/: Connection.hs  Protocol.hs
bench/: MergeSplitPerf.hs  PerfCascade.hs  RealGitPerf.hs
frontend/: flake.nix  next.config.ts  package.json  tsconfig.tsbuildinfo
frontend/src/app/: BucketBadge.tsx  agentstab.tsx  avatar.tsx  bucket.ts  character-sidebar.actions.ts  character-sidebar.tsx  chatview.tsx  codex.tsx  command-autocomplete.tsx  context-library.tsx  context-panel.tsx  context-source.tsx  context-strip.tsx  contextpreview.tsx  dsl-editor.tsx  filetree.tsx  fileview.actions.ts  fileview.tsx  globals.css  layout.tsx  library.tsx  lore-selector.tsx  mention-autocomplete.tsx  page.tsx  sidebar.actions.ts  sidebar.tsx  tasks-panel.actions.ts  tasks-panel.tsx  ticksview.actions.ts  ticksview.tsx  token-decoration.ts  tracker.actions.ts  undo-timeline.tsx
frontend/src/lib/: agents.ts  branches.ts  callContextStore.ts  chatPreview.ts  commands.test.ts  commands.ts  contextAssembly.test.ts  contextAssembly.ts  contextBranch.ts  dslCompose.test.ts  dslCompose.ts  library.ts  loreTrigger.test.ts  loreTrigger.ts  mentions.test.ts  mentions.ts  serverCacheStore.ts  settingsStore.ts  store.ts  taverncard.test.ts  taverncard.ts  uiStore.ts  useAutoScroll.ts  utils.test.ts  utils.ts  ws.ts  wsHelpers.test.ts  wsHelpers.ts
gitlib-effect/: Setup.hs  gitlib-effect.cabal
gitlib-effect/bench/: AncestryBench.hs  BatchBench.hs  BlobSizeBench.hs  CacheBench.hs  FFIBench.hs  HashBench.hs  StrictHashBench.hs
gitlib-effect/cbits/: build-libgit2.sh
gitlib-effect/src/Runix/: Git.hs
gitlib-effect/src/Runix/Git/: Batch.hs  FFI.hs  Hash.hs  Store.hs
gitlib-effect/src/Runix/Git/FFI/: Raw.hs  Types.hs
gitlib-effect/test/: GitBatchSpec.hs  GitCliHash.hs  GitFFISpec.hs  GitHashSpec.hs  GitIOSpec.hs  GitStoreSpec.hs  Main.hs  TestTempRepo.hs
src/: Storyteller.hs
src/Server/: Branch.hs  Env.hs  File.hs  Notification.hs  Protocol.hs  Run.hs  Util.hs
src/Server/Branch/: Connection.hs  Dispatch.hs  Protocol.hs
src/Server/Core/: Branch.hs  File.hs  Logging.hs  Protocol.hs  Run.hs  Util.hs
src/Server/File/: Connection.hs  Dispatch.hs  Protocol.hs
src/Server/Session/: Connection.hs  Dispatch.hs  Protocol.hs
src/Server/Writer/: Branch.hs  Character.hs  Env.hs  File.hs  GitWorker.hs  Library.hs  Lore.hs  Notification.hs  Run.hs
src/Server/Writer/Branch/: Connection.hs  Dispatch.hs  Protocol.hs
src/Server/Writer/Character/: Connection.hs  Protocol.hs
src/Server/Writer/ContextView/: Connection.hs  Protocol.hs
src/Server/Writer/File/: Connection.hs  Dispatch.hs  Protocol.hs
src/Server/Writer/Lore/: Connection.hs  Protocol.hs
src/Server/Writer/Session/: Connection.hs  Dispatch.hs  Protocol.hs
src/Storage/: Core.hs  FS.hs  Ops.hs  Query.hs  Reconcile.hs  Tick.hs
src/Storyteller/: Agent.hs  Annotation.hs  Atom.hs  Edit.hs  Git.hs  Runtime.hs  Storage.hs  Types.hs
src/Storyteller/Agent/: Append.hs  CharContext.hs  CharGen.hs  Continuation.hs  Fix.hs  FlowWrite.hs  ReplaceTool.hs  SplitDiffMerge.hs  Splitter.hs  Tracker.hs  Write.hs
src/Storyteller/CLI/: Env.hs
src/Storyteller/Common/: Annotation.hs  Splitter.hs  Summary.hs  Swipe.hs  Types.hs
src/Storyteller/Context/DSL/: AST.hs  Compile.hs  Context.hs  Library.hs  Parser.hs  QQ.hs  Render.hs  Rendering.hs  Scope.hs  Value.hs
src/Storyteller/Core/: Annotation.hs  Append.hs  Atom.hs  Branch.hs  Context.hs  Create.hs  Created.hs  Edit.hs  Git.hs  Image.hs  Prompt.hs  Runtime.hs  Storage.hs  StorageMonad.hs  Types.hs  Undo.hs
src/Storyteller/Core/CLI/: Env.hs
src/Storyteller/Core/LLM/: Interceptor.hs  Registry.hs  Role.hs  Settings.hs
src/Storyteller/Writer/: Agent.hs  Branches.hs  Library.hs  Lore.hs  Presence.hs  Types.hs
src/Storyteller/Writer/Agent/: AskCharacter.hs  ChapterContext.hs  ChapterSummarizer.hs  CharContext.hs  CharGen.hs  Chat.hs  Context.hs  ContextFilter.hs  ContextPreview.hs  Continuation.hs  Fix.hs  FlowWrite.hs  JournalSummarizer.hs  LoreSummarizer.hs  MessageWindow.hs  Outline.hs  ReplaceTool.hs  Roleplay.hs  Summarizer.hs  Tasks.hs  (+4 more)
test/: Main.hs
test/Git/: Mock.hs
test/Server/: BranchSpec.hs  CharacterSpec.hs  FileSpec.hs  LibrarySpec.hs  NotificationSpec.hs  StorageNotifySpec.hs  TestStack.hs
test/Server/Writer/: BranchSpec.hs  FileSpec.hs  GitWorkerSpec.hs  LoreSpec.hs
test/Storage/: ChainEditSpec.hs  CommitWorktreeSpec.hs  CoreSpec.hs  FSSpec.hs  FoldIntoOpCountSpec.hs  MockStore.hs  OpCounting.hs  OpsSpec.hs  QuerySpec.hs  StoreOpCountSpec.hs  TickSpec.hs
test/Storyteller/: AppendSpec.hs  AtGenericSpec.hs  BranchScopeSpec.hs  BranchesSpec.hs  ChapterSummarizerSpec.hs  CharContextSpec.hs  CharGenSpec.hs  ChatSpec.hs  CommitNewFilesSpec.hs  CommitWorkingTreeSpec.hs  ContextFilterSpec.hs  ContextPreviewSpec.hs  CreateSpec.hs  EditSpec.hs  FileAtomsSpec.hs  GitCascadeSpec.hs  JournalSummarizerSpec.hs  LibrarySpec.hs  LoreSpec.hs  LoreSummarizerSpec.hs  OutlineSpec.hs  PresenceSpec.hs  SplitDiffMergeSpec.hs  SplitterSpec.hs  StorageMonadSpec.hs  StorageSpec.hs  SubdirSpec.hs  SummaryAccessSpec.hs  SummarySpec.hs  TasksSpec.hs  TrackerSpec.hs  UndoSpec.hs  WorldContextSpec.hs
test/Storyteller/Common/: SwipeSpec.hs
test/Storyteller/Core/: ContextSpec.hs
test/Storyteller/Writer/: CharacterAnswerSpec.hs  MessageWindowSpec.hs  ReplaceToolSpec.hs  RoleplaySpec.hs  WriteSpec.hs
test/agent-integration/: FINDINGS.md  Main.hs  PLAN.md
test/fixtures/: minimal.yaml
(+37 files in other folders)
