cabal-version:      3.0
name:               storyteller
version:            0.1.0.0
synopsis:           LLM-powered story development system
description:        Storyteller treats narrative as queryable, versioned state,
                    combining git version control, hierarchical summarization,
                    and character knowledge tracking.
license:            MIT
author:             storyteller authors
maintainer:         authors@storyteller.dev
category:           Development
build-type:         Simple
data-files:         test/fixtures/minimal.yaml

-- | General-purpose git effect + libgit2 interpreter.
--   Intended to migrate to runix proper once stable.
library gitlib-effect
  exposed-modules:  Runix.Git
                  , Runix.Git.Hash
                  , Runix.Git.Batch
                  , Runix.Git.Store
  build-depends:    base >=4.18 && <5
                  , polysemy
                  , polysemy-plugin
                  , text
                  , bytestring
                  , containers
                  , runix
                  , crypton
                  , memory
                  , process
                  , directory
                  , filepath
                  , zlib
  hs-source-dirs:   gitlib-effect/src
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs

library
  exposed-modules:  Storage.Core
                  , Storage.FS
                  , Storage.Ops
                  , Storage.Tick
                  , Storyteller
                  , Storyteller.Core.Types
                  , Storyteller.Writer.Agent
                  , Storyteller.Core.Storage
                  , Storyteller.Core.Branch
                  , Storyteller.Core.Undo
                  , Storyteller.Core.Git
                  , Storyteller.Core.Runtime
                  , Storyteller.Core.Prompt
                  , Storyteller.Core.CLI.Env
                  , Storyteller.Writer.Agent.Continuation
                  , Storyteller.Writer.Agent.ContextFilter
                  , Storyteller.Writer.Agent.Chat
                  , Storyteller.Writer.Agent.CharContext
                  , Storyteller.Common.Splitter
                  , Storyteller.Writer.Agent.Tracker
                  , Storyteller.Writer.Agent.CharGen
                  , Storyteller.Writer.Agent.Write
                  , Storyteller.Writer.Agent.FlowWrite
                  , Storyteller.Writer.Agent.Outline
                  , Storyteller.Writer.Agent.Fix
                  , Storyteller.Writer.Agent.ReplaceTool
                  , Storyteller.Writer.Agent.ContextPreview
                  , Storyteller.Core.Atom
                  , Storyteller.Core.Create
                  , Storyteller.Common.Types
                  , Storyteller.Common.Annotation
                  , Storyteller.Writer.Types
                  , Storyteller.Writer.Presence
                  , Storyteller.Writer.Library
                  , Server.Core.Protocol
                  , Server.Core.Util
                  , Server.Core.Run
                  , Server.Core.Logging
                  , Server.Core.Branch
                  , Server.Core.File
                  , Server.Writer.Env
                  , Server.Writer.GitWorker
                  , Server.Writer.Notification
                  , Server.Writer.Run
                  , Server.Writer.Session.Protocol
                  , Server.Writer.Session.Connection
                  , Server.Writer.Session.Dispatch
                  , Server.Writer.Branch
                  , Server.Writer.File
                  , Server.Writer.Character
                  , Server.Writer.Library
                  , Server.Writer.Branch.Protocol
                  , Server.Writer.Branch.Connection
                  , Server.Writer.Branch.Dispatch
                  , Server.Writer.File.Protocol
                  , Server.Writer.File.Connection
                  , Server.Writer.File.Dispatch
                  , Server.Writer.Character.Protocol
                  , Server.Writer.Character.Connection
                  , Server.Writer.ContextView.Protocol
                  , Server.Writer.ContextView.Connection
                  , Server.Writer.Library.Protocol
                  , Server.Writer.Library.Connection
                  , Server.Writer.Library.Dispatch
  other-modules:
  build-depends:    base >=4.18 && <5
                  , runix
                  , runix-tools
                  , universal-llm
                  , text
                  , bytestring
                  , containers
                  , array
                  , filepath
                  , Glob
                  , polysemy
                  , template-haskell
                  , storyteller:gitlib-effect
                  , polysemy-plugin
                  , aeson
                  , autodocodec
                  , scientific
                  , vector
                  , random
                  , mtl
                  , websockets
                  , wai
                  , warp
                  , wai-websockets
                  , http-types
                  , yaml
                  , stm
                  , time
                  , async
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -O2

-- ---------------------------------------------------------------------------
-- Executables
-- ---------------------------------------------------------------------------

common exe-common
  build-depends:    base >=4.18 && <5
                  , storyteller
                  , storyteller:gitlib-effect
                  , runix
                  , universal-llm
                  , text
                  , bytestring
                  , containers
                  , polysemy
                  , polysemy-plugin
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -O2
                    -fplugin=Polysemy.Plugin

-- | Append a generated story section.
executable story-write
  import:           exe-common
  main-is:          Write.hs
  hs-source-dirs:   app

-- | Expand a story outline into a chapter beat sheet.
executable story-outline
  import:           exe-common
  main-is:          Outline.hs
  hs-source-dirs:   app

-- | Generate a chapter's prose from its beat sheet.
executable story-chapter
  import:           exe-common
  main-is:          Chapter.hs
  hs-source-dirs:   app

-- | Copy atoms from a source branch into an entity/tracker branch.
executable story-track
  import:           exe-common
  main-is:          Track.hs
  hs-source-dirs:   app

-- | Split working-tree diffs and merge them into the chain at the right positions.
executable story-rebase
  import:           exe-common
  main-is:          Rebase.hs
  hs-source-dirs:   app

-- | Resolve a scenario template into a character sheet and commit it to an entity branch.
executable story-chargen
  import:           exe-common
  main-is:          CharGen.hs
  hs-source-dirs:   app
  build-depends:    yaml
                  , random


-- | WebSocket server.
executable story-server
  import:           exe-common
  main-is:          Server.hs
  hs-source-dirs:   app
  build-depends:    wai
                  , warp
                  , websockets
                  , wai-websockets
                  , http-types
                  , filepath

test-suite storyteller-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Git.Mock
                  , Paths_storyteller
                  , Storage.MockStore
                  , Storage.CoreSpec
                  , Storage.FSSpec
                  , Storage.OpsSpec
                  , Storage.CommitWorktreeSpec
                  , Storage.ChainEditSpec
                  , Storage.TickSpec
                  , Storyteller.FileAtomsSpec
                  , Storyteller.AtGenericSpec
                  , Storyteller.StorageSpec
                  , Storyteller.GitCascadeSpec
                  , Storyteller.AppendSpec
                  , Storyteller.CommitNewFilesSpec
                  , Storyteller.CreateSpec
                  , Storyteller.SubdirSpec
                  , Storyteller.SplitterSpec
                  , Storyteller.TrackerSpec
                  , Storyteller.CharGenSpec
                  , Storyteller.PresenceSpec
                  , Storyteller.UndoSpec
                  , Storyteller.ChatSpec
                  , Storyteller.LibrarySpec
                  , Storyteller.ContextFilterSpec
                  , Server.TestStack
                  , Server.BranchSpec
                  , Server.Writer.BranchSpec
                  , Server.FileSpec
                  , Server.CharacterSpec
                  , Server.LibrarySpec
                  , Server.NotificationSpec
                  , Server.Writer.GitWorkerSpec
  autogen-modules:  Paths_storyteller
  build-depends:    base >=4.18 && <5
                  , storyteller
                  , storyteller:gitlib-effect
                  , polysemy
                  , polysemy-plugin
                  , containers
                  , bytestring
                  , text
                  , runix
                  , universal-llm
                  , time
                  , mtl
                  , hspec >=2.11
                  , QuickCheck >=2.14
                  , hashable
                  , aeson
                  , yaml
                  , stm
                  , process
                  , temporary
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -fplugin=Polysemy.Plugin

-- | Scaling probe for the At/updateReferences cascade cost (see
-- bench/PerfCascade.hs). Not a correctness test: scaling badly is a
-- performance fact to observe via 'cabal bench', not a build failure.
benchmark storyteller-cascade-perf
  type:             exitcode-stdio-1.0
  main-is:          PerfCascade.hs
  other-modules:    Git.Mock
  build-depends:    base >=4.18 && <5
                  , storyteller
                  , storyteller:gitlib-effect
                  , polysemy
                  , polysemy-plugin
                  , containers
                  , text
                  , bytestring
                  , runix
                  , hashable
  hs-source-dirs:   bench, test
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -O2
                    -fplugin=Polysemy.Plugin

-- | Diagnostic: reproduce a real-git-backed edit deep in history (not
-- Git.Mock) to isolate whether the remaining cost after the storage-monad
-- migration is git-subprocess-call count rather than Polysemy dispatch.
-- Not a correctness check; never fails the build.
benchmark real-git-perf
  type:             exitcode-stdio-1.0
  main-is:          RealGitPerf.hs
  build-depends:    base >=4.18 && <5
                  , storyteller
                  , storyteller:gitlib-effect
                  , polysemy
                  , polysemy-plugin
                  , containers
                  , text
                  , runix
  hs-source-dirs:   bench
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -O2
                    -fplugin=Polysemy.Plugin

-- | Property tests for 'Runix.Git.Hash': checks the in-process hash
-- computation against real @git hash-object@ as the oracle ('GitCliHash').
test-suite gitlib-effect-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    GitCliHash
                  , GitHashSpec
                  , GitIOSpec
                  , GitBatchSpec
                  , GitStoreSpec
                  , TestTempRepo
  build-depends:    base >=4.18 && <5
                  , storyteller:gitlib-effect
                  , bytestring
                  , text
                  , process
                  , temporary
                  , polysemy
                  , runix
                  , hspec >=2.11
                  , QuickCheck >=2.14
  hs-source-dirs:   gitlib-effect/test
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs

-- | Throughput comparison: in-process hashing ('Runix.Git.Hash') vs
-- shelling out to @git hash-object@ per call (the implementation it
-- replaces) -- puts real ops/s numbers on the round-trip this is meant to
-- remove. Not a correctness check (see 'gitlib-effect-test' for that).
benchmark gitlib-effect-hash-bench
  type:             exitcode-stdio-1.0
  main-is:          HashBench.hs
  other-modules:    GitCliHash
  build-depends:    base >=4.18 && <5
                  , storyteller:gitlib-effect
                  , bytestring
                  , text
                  , process
  hs-source-dirs:   gitlib-effect/test, gitlib-effect/bench
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -O2

-- | Throughput comparison: reading objects through a persistent
-- @git cat-file --batch@ process vs one-shot @git cat-file@ calls (the
-- approach 'Runix.Git.runGitIO' uses today). Not a correctness check --
-- see @GitBatchSpec@ (gitlib-effect-test) for that.
benchmark gitlib-effect-batch-bench
  type:             exitcode-stdio-1.0
  main-is:          BatchBench.hs
  build-depends:    base >=4.18 && <5
                  , storyteller:gitlib-effect
                  , bytestring
                  , text
                  , process
                  , temporary
                  , polysemy
                  , runix
  hs-source-dirs:   gitlib-effect/bench
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -O2
